# esp-junkers-bm1

./: .gitignore  Cargo.toml  build-ota.sh  build.rs  partitions.csv
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: console.rs  defmt_via_tcp.rs  homematic.rs  i2c.rs  lib.rs  ota.rs  regulator.rs
