[package]
edition      = "2024"
name         = "esp-junkers-bm1"
rust-version = "1.92"
version      = "0.1.0"

[[bin]]
name = "esp-junkers-bm1"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt                  = {version = "1.0.1", features = ["encoding-rzcobs"]}
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] } # 0.6.2 is required by nostd-interactive-terminal. should be 0.7.2
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-storage = "0.3.1"
esp-alloc  = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave",  features = ["defmt", "esp32c6"] }
esp-bootloader-esp-idf = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave",  features = ["defmt", "esp32c6"] }
esp-hal = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave", features = ["defmt", "esp32c6", "unstable"] }
esp-rtos = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }
esp-storage = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave", features = ["defmt", "esp32c6"] }
heapless = {version = "0.9.2", features = ["defmt"] }
nostd-interactive-terminal = { version="0.1.1", features=["ansi-support"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
esp-radio = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave", features = [
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
nb ={ version = "1.1.0", features = ["defmt-0-3"]}
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell      = "2.1.1"
toml-cfg = "0.2.0"
ws2812-spi = {version = "0.5.1", features = ["mosi_idle_high"]}
smart-leds = "0.4.0"
enumset = "1.1.10"

[build-dependencies]
uuid = {version = "1.18.1", features = ["v7"]}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
