[package]
edition      = "2024"
name         = "esp-junkers-bm1"
rust-version = "1.92"
version      = "0.1.0"

[[bin]]
name = "esp-junkers-bm1"
path = "./src/bin/main.rs"

[features]
default = []
local_test = [] # used for local test builds, not for production firmware!

[dependencies]
critical-section = "1.2.0"
defmt                  = {version = "1.0.1", features = ["encoding-rzcobs"]}
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "dhcpv4-hostname",
  "dns",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] } # 0.6.2 is required by nostd-interactive-terminal. should be 0.7.2
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-storage = "0.3.1"
esp-alloc  = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave",  features = ["defmt", "esp32c6"] }
esp-bootloader-esp-idf = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave",  features = ["defmt", "esp32c6"] }
esp-hal = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave", features = ["defmt", "esp32c6", "unstable"] }
esp-rtos = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }
esp-storage = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave", features = ["defmt", "esp32c6"] }
heapless = {version = "0.9.2", features = ["defmt"] }
nostd-interactive-terminal = { git = "https://github.com/mbehr1/nostd-interactive-terminal", rev="6609d56" , features=["ansi-support"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = [] } # we use our own defmt integration
# for more networking protocol support see https://crates.io/crates/edge-net
esp-radio = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave", features = [
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
nb ={ version = "1.1.0", features = ["defmt-0-3"]}
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell      = "2.1.1"
toml-cfg = "0.2.0"
ws2812-spi = {version = "0.5.1", features = ["mosi_idle_high"]}
smart-leds = "0.4.0"
enumset = "1.1.10"
fring = "0.3.3"

base64         = {version = "0.22.1", default-features =  false, features = [] }
core-json = "0.4.0"
embedded-nal-async = "0.8.0"
embedded-websocket = {version = "0.9.4", default-features = false }
esp-mbedtls = { version="0.1", git="https://github.com/mbehr1/esp-mbedtls", features=["esp32c6", "async"], rev="289436ff984b67139762bc97855b87d8dc41dbf8"}
esp-mbedtls-sys = { version="0.1", git="https://github.com/mbehr1/esp-mbedtls", features=["esp32c6"], rev="289436ff984b67139762bc97855b87d8dc41dbf8"}
jiff = {version="0.2.17", default-features = false, features = ["alloc", "static"] }
rand_core       = "0.9.3"
reqwless = { version = "0.13", default-features = false, features = ["defmt", "esp-mbedtls", "alloc"], git="https://github.com/mbehr1/reqwless", branch = "fix/defmt_esp-mbedtls"}
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

# Force reqwless to use your esp-mbedtls fork
[patch."https://github.com/esp-rs/esp-mbedtls"]
esp-mbedtls = { git = "https://github.com/mbehr1/esp-mbedtls", rev="289436ff984b67139762bc97855b87d8dc41dbf8" }
esp-mbedtls-sys = { git = "https://github.com/mbehr1/esp-mbedtls", rev="289436ff984b67139762bc97855b87d8dc41dbf8" }

[patch.crates-io]
esp-hal = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave" }
esp-alloc = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave" }
esp-bootloader-esp-idf = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave" }
esp-rtos = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave" }
esp-storage = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave" }
esp-radio = { git = "https://github.com/mbehr1/esp-hal", branch = "feat/i2c_slave" }

[build-dependencies]
uuid = {version = "1.18.1", features = ["v7"]}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
